tests/errors/first_stage/operation/extra_chars/extra_chars.as
; extra characters after operation
mov r1, r2,